fixed nav logo icon bug on small screens.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,8 +18,14 @@
 }
 
 #navHeaderLogo {
-    margin: 0;
+    margin: 10% 0;
 }
+
+#navHeaderIcon {
+    line-height: 100%;
+    height: 100%;
+}
+
 
 #landingPageNav {
     /* background: linear-gradient(45deg, rgb(244,67,54, 1), rgb(244,67,54, 0.8)); */
